# roasted-beans-inventory-system

./: README.md
coffee_beans_api/: .env  Cargo.toml
coffee_beans_api/src/: main.rs  model.rs
coffee_beans_api_django/: .env  .gitignore  initial_data.json  manage.py  passenger_wsgi.py  requirements.txt
coffee_beans_api_django/coffee_beans_api_django/: asgi.py  settings.py  urls.py  wsgi.py
coffee_beans_api_django/inventory/: models.py  serializers.py  views.py
coffee_beans_api_django/inventory/migrations/: 0001_initial.py  0002_alter_coffeebean_quantity.py  0003_coffeebean_roast_date_alter_coffeebean_quantity.py  0004_alter_coffeebean_quantity.py  0005_alter_coffeebean_origin_alter_coffeebean_roast_date.py  0006_rename_quantity_coffeebean_weight.py
coffee_beans_api_django/user_management/: admin.py  apps.py  models.py  serializers.py  signals.py  singnals.py  urls.py  views.py
coffee_beans_api_django/user_management/migrations/: 0001_initial.py  0002_rename_permission_custompermission_delete_user.py
coffee_beans_api_django/user_management/templates/: login.html
coffee_beans_frontend/: README.md  package-lock.json  package.json
coffee_beans_frontend/src/: App.vue  main.js
coffee_beans_frontend/src/assets/: formLabel.js
coffee_beans_frontend/src/components/: CoffeeBeanForm.vue  CoffeeBeansList.vue  CreateUserForm.vue  EditCoffeeBeanDialog.vue  EditUserForm.vue  LoginForm.vue  MainNavbar.vue  UserList.vue  UserProfile.vue  useCoffeeBeansState.js  useFetchCoffeeBeans.js  useMessageState.js
coffee_beans_frontend/src/router/: index.js
(+7 files in other folders)
