[package]
name = "coffee_beans_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
dotenv = "0.15"
axum-macros = "0.4.1"
serde = "1.0.196"
